statum-macros/tests/ui/invalid_validators_wrong_signature.stderr
error: Error: is_draft must declare only `&self`. Statum injects machine fields into validator methods by name automatically, so do not write extra parameters.
  --> tests/ui/invalid_validators_wrong_signature.rs:22:1
   |
22 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_wrong_signature.rs:33:2
   |
33 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_wrong_signature.rs`
